--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "dev": "next",
-    "build": "next build && echo '/*    /index.html   200' > build/_redirects",
+    "build": "next build",
     "start": "NODE_ENV=production next start",
     "lint": "standard"
   }
